# sentinel

./: .gitignore  PROJECT_SPEC.md  README.md  SECURITY_AUDIT.md  VULNERABILITY_CHECK_PLAN.md  doc.txt  meson.build  pyproject.toml  run_dev.sh  run_tests.sh  update_po.py
.github/workflows/: flatpak.yml  release-build.yml
data/: io.github.ailing2416.sentinel.desktop.in  io.github.ailing2416.sentinel.gschema.xml  io.github.ailing2416.sentinel.metainfo.xml.in  meson.build
data/icons/: meson.build
flatpak/: io.github.ailing2416.sentinel-full.yml  io.github.ailing2416.sentinel.yml
po/: LINGUAS  POTFILES.in  de.po  de.po~  en.po  en.po~  meson.build  sentinel.pot  zh_CN.po  zh_CN.po~  zh_TW.po  zh_TW.po~
src/: __init__.py  application.py  main.py  main.py.in  meson.build
src/db/: database.py  migration.py
src/models/: connection.py  connection_group.py  forward_rule.py
src/services/: async_engine.py  rclone_service.py  sftp_service.py  ssh_client.py  ssh_service.py  sync_manager.py  vault_manager.py  vault_service.py
src/utils/: secure.py  ssh_key_utils.py  themes.py
src/vault/: base.py  bitwarden.py  keyring_helper.py  libsecret.py  models.py  secure_vault.py
src/views/: app_settings_dialog.py  chrome_tab_bar.py  connection_list.py  dialogs.py  hosts_view.py  keychain_view.py  main_window.py  port_forwarding_view.py  sftp_view.py  terminal_theme_dialog.py  terminal_view.py  vault_settings_dialog.py
tests/: conftest.py  manual_test_vte_feed.py
tests/performance/: benchmark.py
tests/unit/: test_bitwarden_upload.py  test_sync_manager.py  test_terminal_theme_cache.py
