[project]
name = "sentinel"
version = "0.2.1"
description = "A secure GNOME SSH connection manager with password manager integration"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "PyGObject>=3.46",
    "asyncssh>=2.14",
    "aiosqlite>=0.19",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff>=0.3",
    "mypy>=1.8",
    "bandit>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "security: security-related tests",
    "integration: integration tests requiring external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests"]
